# clinic-haskell

./: cabal.project.freeze  clinic.cabal  flake.nix
app/: Main.hs
src/: Clinic.hs
src/Clinic/: API.hs  Database.hs
