cabal-version: 3.0
name:          clinic
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        thelissimus
maintainer:    thelissimus@tuta.io
build-type:    Simple

common defaults
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

library
  import:          defaults, warnings
  exposed-modules: Clinic
  build-depends:
    , aeson
    , base                   ^>=4.17.2.1
    , bytestring
    , esqueleto
    , monad-logger
    , mtl
    , optparse-generic
    , persistent
    , persistent-postgresql
    , resource-pool
    , servant
    , servant-server
    , stm
    , text
    , time
    , transformers
    , unliftio
    , warp

  hs-source-dirs:  src

executable clinic
  import:         defaults, warnings
  main-is:        Main.hs
  build-depends:
    , base    ^>=4.17.2.1
    , clinic

  hs-source-dirs: app

test-suite clinic-test
  import:         defaults, warnings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base    ^>=4.17.2.1
    , clinic
