cabal-version: 3.0
name:          clinic
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        thelissimus
maintainer:    thelissimus@tuta.io
build-type:    Simple

common defaults
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedRecordDot

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

library
  import:          defaults, warnings
  exposed-modules:
    Clinic
    Clinic.API
    Clinic.Database

  build-depends:
    , aeson
    , base            ^>=4.17.2.1
    , esqueleto
    , mtl
    , persistent
    , resource-pool
    , servant
    , servant-server
    , stm
    , text
    , time
    , transformers
    , unliftio

  hs-source-dirs:  src

executable clinic
  import:         defaults, warnings
  main-is:        Main.hs
  build-depends:
    , base                   ^>=4.17.2.1
    , bytestring
    , clinic
    , monad-logger
    , optparse-generic
    , persistent-postgresql
    , warp

  hs-source-dirs: app

test-suite clinic-test
  import:         defaults, warnings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base    ^>=4.17.2.1
    , clinic
